fix(css): line-height and spacing

--- a/src/ellipsis/ellipsis.css
+++ b/src/ellipsis/ellipsis.css
@@ -2,5 +2,5 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  line-height: 1.1em;
+  line-height: 1.15em;
 }
